# vmlapis

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  buf.gen.all.yaml  buf.gen.deps.js.yaml  buf.gen.deps.yaml  buf.gen.grpc.yaml  buf.gen.openapiv2.yaml  buf.gen.pyi.yaml  buf.gen.python.yaml  buf.gen.validate.go.yaml  buf.gen.yaml  cloudbuild.yaml  gen.sh  go.mod  go.mod.example  go.sum  job.proto  package.json  requirements.txt  setup.py  tasks.py  vmlapis.csproj
examples/c#/: README.md
examples/c#/AnnotateDocumentExample/: AnnotateDocumentExample.csproj  Program.cs
examples/c#/CreateDatasetExample/: CreateDatasetExample.csproj  (+1 more)
examples/go/: README.md  example.go  go.mod
examples/java/: README.md
examples/python/: README.md
examples/python/async/: pyproject.toml
examples/python/async/async/: main.py
imageservice/: imageservice.pb.go  imageservice.proto
java-package/: pom.xml
ovlservice/: ovlservice.pb.go  ovlservice.proto
proto/: buf.yaml  prototool.yaml
proto/cv/: cv.proto
proto/gen_bq_schema/: bq_field.proto  bq_table.proto
py/: setup.py
scripts/: go-gen-asgt.sh  go-gen-ssn.sh  go-gen.sh  go.sum  go_mod.sh  gomock.sh  js_fixes.sh  py_fixes.sh  py_init.sh  py_rls.sh
showmethemoney/: showmethemoney.pb.go  showmethemoney.proto
ssn/: http-api.yaml  ssn.pb.go  ssn.pb.gw.go  ssn.proto
ssn/imageservice/: imageservice.pb.go  imageservice.proto
ssn/mlservice/: mlservice.pb.go  mlservice.proto
ssn/ocrservice/: ocrservice.pb.go  ocrservice.proto
ssn/pdfservice/: pdfservice.pb.go  pdfservice.proto
(+200 files in other folders)
